--- a/package.json
+++ b/package.json
@@ -16,8 +16,15 @@
     "format": "prettier --write src/",
     "prepare": "husky"
   },
+  "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix"
+    ]
+  },
   "dependencies": {
+    "element-plus": "^2.9.6",
     "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -44,6 +51,8 @@
     "oxlint": "^0.15.13",
     "prettier": "3.5.3",
     "typescript": "~5.8.0",
+    "unplugin-auto-import": "^19.1.1",
+    "unplugin-vue-components": "^28.4.1",
     "vite": "^6.2.1",
     "vite-plugin-vue-devtools": "^7.7.2",
     "vitest": "^3.0.8",
