chore: test husky

--- a/package.json
+++ b/package.json
@@ -16,8 +16,14 @@
     "format": "prettier --write src/",
     "prepare": "husky"
   },
+   "lint-staged": {
+    "*.{js,jsx,ts,tsx}": [
+      "eslint --fix"
+    ]
+  },
   "dependencies": {
     "husky": "^9.1.7",
+    "lint-staged": "^15.4.3",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
